updated code for submission
added student info at bottom

--- a/asgn1/code/ColoredPoints.html
+++ b/asgn1/code/ColoredPoints.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -44,3 +45,10 @@
   </body>
 </html>
 
+<p> 
+Walter Bergstroem
+wbergstr@ucsc.edu
+
+Sources:
+https://webglfundamentals.org/webgl/lessons/webgl-and-alpha.html //For transparency slider
+</p>
