--- a/asgn3/index.html
+++ b/asgn3/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Voxel World – Skeleton</title>
+  <title>CSE 160 Asgn3</title>
 
   <!-- Full‑window canvas style -->
   <style>
